load("@bazel_gazelle//:def.bzl", "gazelle")

alias(
    name = "jdk",
    actual = select(
        {
            "@bazel_tools//src/conditions:darwin": "@jdk11_macos//:jdk",
            "@bazel_tools//src/conditions:darwin_x86_64": "@jdk11_macos//:jdk",
            "@bazel_tools//src/conditions:linux_x86_64": "@jdk11_linux//:jdk",
            "@bazel_tools//src/conditions:windows": "@jdk11_windows//:jdk",
        },
        no_match_error = "Could not find a JDK for host execution environment, please explicitly" +
                         " provide one using `--host_javabase.`",
    ),
    visibility = ["//visibility:public"],
)

alias(
    name = "frontend",
    actual = "//frontend:groceries",
)

alias(
    name = "service",
    actual = "//service/src/main/java/com/oasisdigital/grocery:grocery",
)

alias(
    name = "service-deploy",
    actual = "//service/src/main/java/com/oasisdigital/grocery:grocery_deploy.jar",
)

# Useful for update-repos, even if we don't use Gazelle otherwise.

gazelle(name = "gazelle")
