load("@bazel_gazelle//:def.bzl", "gazelle")

alias(
    name = "frontend",
    actual = "//frontend:groceries",
)

alias(
    name = "service",
    actual = "//service/src/main/java/com/oasisdigital/grocery:grocery",
)

alias(
    name = "service-deploy",
    actual = "//service/src/main/java/com/oasisdigital/grocery:grocery_deploy.jar",
)

# Useful for update-repos, even if we don't use Gazelle otherwise.

gazelle(name = "gazelle")
