# Java rules need a top level target

alias(
    name = "jdk",
    actual = select(
        {
            "@bazel_tools//src/conditions:darwin_x86_64": "@jdk15_macos//:jdk",
            "@bazel_tools//src/conditions:linux_x86_64": "@jdk15_linux//:jdk",
            "@bazel_tools//src/conditions:windows": "@jdk15_windows//:jdk",
        },
        no_match_error = "Could not find a JDK for host execution environment, please explicitly" +
                         " provide one using `--host_javabase.`",
    ),
    visibility = ["//visibility:public"],
)

# Typescript tools need a top level target

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)
