load("@bazel_gazelle//:def.bzl", "gazelle")
load("@com_github_ash2k_bazel_tools//multirun:def.bzl", "multirun")
load("service_list.bzl", "SERVICES")

alias(
    name = "jdk",
    actual = select(
        {
            "@bazel_tools//src/conditions:darwin_x86_64": "@jdk15_macos//:jdk",
            "@bazel_tools//src/conditions:linux_x86_64": "@jdk15_linux//:jdk",
            "@bazel_tools//src/conditions:windows": "@jdk15_windows//:jdk",
        },
        no_match_error = "Could not find a JDK for host execution environment, please explicitly" +
                         " provide one using `--host_javabase.`",
    ),
    visibility = ["//visibility:public"],
)

# Useful for update-repos, even if we don't use Gazelle otherwise.

gazelle(name = "gazelle")

multirun(
    name = "develop",
    commands = [s + ":command" for s in SERVICES] + [
        "//people",
        "//frontend",
    ],
    parallel = True,
)
