package(default_visibility = ["//:__subpackages__"])

exports_files(["favicon.ico"])

alias(
    name = "client",
    actual = "//client/src:devserver",
)

# ts_project uses the `//:tsconfig.json` target
# by default. This alias allows omitting explicit tsconfig
# attribute.
alias(
    name = "tsconfig.json",
    actual = "//client/src:tsconfig.json",
)

# Just a dummy test so that we have a test target for //... on certain bazelci platforms with bazel_integration_test
sh_test(
    name = "dummy_test",
    srcs = ["dummy_test.sh"],
)
