load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
)

go_proto_library(
    name = "api_proto_go",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "proto/spelling/api",
    proto = ":api_proto",
)

java_proto_library(
    name = "api_proto_java",
    deps = [":api_proto"],
)

java_grpc_library(
    name = "api_proto_java_lib",
    srcs = [":api_proto"],
    deps = [":api_proto_java"],
)

cc_proto_library(
    name = "api_cc_proto",
    deps = [":api_proto"],
)

cc_grpc_library(
    name = "api_cc_grpc",
    srcs = [":api_proto"],
    grpc_only = True,
    deps = [":api_cc_proto"],
)
