load(":cc65.bzl", "cc65_toolchain_config")

# Relying on the common tools for OS-level install, the only Linux/Mac
# difference is the path where the binaries are located.

cc65_toolchain_config(
    name = "cc65_linux_toolchain_config",
    binpath = "/usr/bin",
    target = "atari2600",
)

cc65_toolchain_config(
    name = "cc65_osx_toolchain_config",
    binpath = "/usr/local/bin",
    target = "atari2600",
)

filegroup(
    name = "toolchain_files",
    srcs = [
        # Targets that comprise the toolchain - changes in these
        # targets will result in rebuild.
        "cc65.bzl",
        # Otherwise empty, because they come from a system-level install.
    ],
)

# cc_toolchain is the primary hook to extend Bazel's very configurable
# CC support with a new compiler.
# https://docs.bazel.build/versions/main/cc-toolchain-config-reference.html

cc_toolchain(
    name = "cc65_linux_toolchain_definition",
    all_files = ":toolchain_files",
    compiler_files = ":toolchain_files",
    dwp_files = ":toolchain_files",
    linker_files = ":toolchain_files",
    objcopy_files = ":toolchain_files",
    strip_files = ":toolchain_files",
    supports_param_files = 0,
    toolchain_config = ":cc65_linux_toolchain_config",
)

cc_toolchain(
    name = "cc65_osx_toolchain_definition",
    all_files = ":toolchain_files",
    compiler_files = ":toolchain_files",
    dwp_files = ":toolchain_files",
    linker_files = ":toolchain_files",
    objcopy_files = ":toolchain_files",
    strip_files = ":toolchain_files",
    supports_param_files = 0,
    toolchain_config = ":cc65_osx_toolchain_config",
)

toolchain(
    name = "cc65_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "//platforms:mos6502",
        "//platforms:atari2600",
    ],
    toolchain = ":cc65_linux_toolchain_definition",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "cc65_osx_toolchain",
    exec_compatible_with = [
        "@platforms//os:osx",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "//platforms:mos6502",
        "//platforms:atari2600",
    ],
    toolchain = ":cc65_osx_toolchain_definition",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

# TODO:
# Add Windows support
