load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

package(default_visibility = ["//visibility:private"])

ts_library(
    name = "app",
    srcs = glob(["src/**/*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//express",
        "@npm//sse-channel",
        "@npm//tslib",
    ],
)

filegroup(
    name = "assets",
    srcs = glob(["www/**/*"]),
)

# bazel run //server
nodejs_binary(
    name = "fx-server",
    data = [
        ":app",
        ":assets",
    ],
    entry_point = ":src/main.ts",
    visibility = ["//visibility:public"],
)
