load("@rules_java//java:defs.bzl", "java_binary")
load("@com_github_atlassian_bazel_tools//multirun:def.bzl", "command")

package(default_visibility = ["//visibility:public"])

java_binary(
  name = "speller000",
  main_class = "com.oasisdigital.spelling.SpellingServer",
  runtime_deps = ["//speller000/src/main/java/com/oasisdigital/spelling:spelling-lib"],
)

command(
  name = "command",
  command = ":speller000",
)

