load("@rules_java//java:defs.bzl", "java_binary")
load("@com_github_ash2k_bazel_tools//multirun:def.bzl", "command")

package(default_visibility = ["//visibility:public"])

java_binary(
    name = "speller003",
    main_class = "com.oasisdigital.spelling.SpellingServer",
    runtime_deps = ["//speller003/src/main/java/com/oasisdigital/spelling:spelling-lib"],
)

command(
    name = "command",
    command = ":speller003",
)
